# FastApiTest

./: .gitignore  .pre-commit-config.yaml  README.md  Task.md  docker-compose.dev.yaml  docker-compose.yaml
backend/: Dockerfile
backend/src/: prestart.sh  pyproject.toml  start.sh
backend/src/alembic/: env.py
backend/src/alembic/versions/: acc34e378bae_initial.py
backend/src/app/api/api_v1/: api.py
backend/src/app/api/api_v1/endpoints/: login.py  posts.py  users.py
backend/src/app/core/: config.py
backend/src/app/crud/: __init__.py  crud_comment.py  crud_post.py
backend/src/app/db/: base.py
backend/src/app/models/: comment.py  post.py  user.py
backend/src/app/schemas/: __init__.py  comment.py  post.py
backend/src/app/tests/crud/: conftest.py  test_comment.py  test_post.py
db/: .env
nginx/: nginx.conf
nginx/configs/: site.conf
