[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alexander Zhabinskiy <alexzhabinskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
SQLAlchemy = "^1.4.45"
alembic = "^1.9.0"
psycopg2-binary = "^2.9.5"
tenacity = "^8.1.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = "^0.20.0"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.2"}
python-multipart = "^0.0.5"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version=3.11
show_error_codes=true
warn_redundant_casts=true
strict_optional=false

#warn_unused_ignores = true
disallow_untyped_defs = true

#pretty=true
#follow_imports = silent
#disallow_any_unimported=true
#disallow_any_expr=true

